--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,10 @@
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "./node_modules/swiper/swiper.min.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/flexboxgrid/dist/flexboxgrid.min.css"
             ],
             "scripts": []
           },
@@ -93,7 +95,7 @@
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss"],
+            "styles": ["./node_modules/@angular/material/prebuilt-themes/indigo-pink.css", "src/styles.scss"],
             "scripts": []
           }
         }
