--- a/angular.json
+++ b/angular.json
@@ -57,6 +57,27 @@
               ],
               "outputHashing": "all"
             },
+            "testing": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.testing.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
             "development": {
               "buildOptimizer": false,
               "optimization": false,
@@ -73,6 +94,9 @@
           "configurations": {
             "production": {
               "browserTarget": "newProyect:build:production"
+            },
+            "testing": {
+              "browserTarget": "newProyect:build:testing"
             },
             "development": {
               "browserTarget": "newProyect:build:development"
